fix section process overflow

--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -32,3 +32,7 @@
 .text-center {
   text-align: center;
 }
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
